<resources>
    <string name="app_name">Money Lover</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_string">Tài Khoản</string>
    <string name="cash_string">Giao dịch</string>
    <string name="debts_string">Vay Mượn</string>
    <string name="statistics_string">Thống kê</string>
    <string name="category_string">Danh mục</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
</resources>
